--- a/Dockerfile.arm32v7
+++ b/Dockerfile.arm32v7
@@ -1,11 +1,6 @@
-FROM alpine AS builder
-
-ENV QEMU_URL https://github.com/multiarch/qemu-user-static/releases/download/v5.1.0-5/x86_64_qemu-arm-static.tar.gz
-RUN apk add curl && curl -L ${QEMU_URL} | tar zxvf - -C . --strip-components 1
-
 FROM alpine:latest
 
-COPY --from=builder qemu-arm-static /usr/bin
+COPY qemu-arm-static /usr/bin
 
 RUN apk --no-cache add bash vsftpd
 
